# UMDCTF-Public-Challenges

./: README.md
UMDCTF2018/: README.md
UMDCTF2018/Blast From The Past/: README.md
UMDCTF2018/Crypto/Bitcon/: README.md  bitcoin_chall.py  solution.py
UMDCTF2018/Crypto/Broken RSA/: README.md  encrypted_flag.txt  public.key
UMDCTF2018/Crypto/Cert Builder/: README.md  cert_info.txt
UMDCTF2018/Crypto/Crypticker/: README.md
UMDCTF2018/Crypto/Diffie HELL/: README.md  encrypted.umdctf  flag_hider.sh  parameters.txt
UMDCTF2018/Crypto/Turing_Letter_0/: README.md
UMDCTF2018/Crypto/Whitepaper Crypto/: README.md
UMDCTF2018/Forensics/Desktop Background/: README.md
UMDCTF2018/Forensics/Eternally Crying/: Microsoft-Windows-Sysmon%4Operational.evtx  README.md
UMDCTF2018/Forensics/Excellent Security/: README.md  mal_vbs.vbs
UMDCTF2018/Forensics/Full Physical/: README.md
UMDCTF2018/Forensics/Meme Forensics/: FIND_ME.meme  README.md
UMDCTF2018/Forensics/One hash at a time/: README.MD
UMDCTF2018/Forensics/Packet Rapture/: README.md
UMDCTF2018/Forensics/Producer Consumer/: MAPPING1.MAP  MAPPING2.MAP  MAPPING3.MAP  README.md
UMDCTF2018/Forensics/Proto-Tough/: README.md  challenge.proto  challenge_pb2.py  server.py  solution.py
UMDCTF2018/Forensics/Snoop/: README.md  snoop.fpff
UMDCTF2018/Forensics/Threat Memetelligence/: README.md
UMDCTF2018/Forensics/Timed Trouble/: Dockerfile  flag.txt  mal.ps1
UMDCTF2018/Misc/A Nested Development/: README.md
UMDCTF2018/Misc/Consensus/: README.md
UMDCTF2018/Misc/DRM/: README.md
UMDCTF2018/Misc/Deconstructed Logic/: README.md
UMDCTF2018/Misc/Mate Lovers/: README.md
UMDCTF2018/Misc/Parrot Party/: party.py
UMDCTF2018/Misc/Stevedore/: README.md
UMDCTF2018/Misc/Unhidden_1/: README.md
UMDCTF2018/Misc/Unhidden_2/: README.md
UMDCTF2018/Misc/Unhidden_3/: README.md
UMDCTF2018/Misc/tracking-device/: README.md  gps_tracker_log  solve.txt
UMDCTF2018/Reverse Engineering/EzPz/: README.md
UMDCTF2018/Reverse Engineering/JarJarLibs/: JarJar  README.md
UMDCTF2018/Reverse Engineering/License Required/: License_Required  README.md
UMDCTF2018/Reverse Engineering/Lorem Mipsum/: README.md  data.enc  lorem_mipsum.s
UMDCTF2018/Reverse Engineering/Python Cafe/: README.md  pycafe.py
UMDCTF2018/Reverse Engineering/Scary Bin/: README.md
UMDCTF2018/Reverse Engineering/Speed Demon/: README.md  speed_demon.rb
UMDCTF2018/Reverse Engineering/Strange_ASM/: README.md  Strange_Asm
UMDCTF2018/Reverse Engineering/Towels Revenge/: README.md
UMDCTF2018/Reverse Engineering/XORcise/: README.md
UMDCTF2018/Steganography/Abstract Art/: README.md
UMDCTF2018/Steganography/Apple/: README.md
UMDCTF2018/Steganography/ColorBlind/: README.md
UMDCTF2018/Steganography/Fractals/: README.md
UMDCTF2018/Steganography/From Russia With Love/: README.md  comrade.txt
UMDCTF2018/Steganography/MemeLords/: README.md
UMDCTF2018/Web/AuthorizedAgent/: Dockerfile  (+4 more)
UMDCTF2019/: README.md
UMDCTF2020/: README.md
UMDCTF2021/: README.md
UMDCTF2022/: README.md
UMDCTF2022/crypto/: README.md
UMDCTF2022/forensics/: README.md
UMDCTF2022/hw+rf/: README.md
UMDCTF2022/misc/: README.md
UMDCTF2022/osint/: README.md
UMDCTF2022/pwn/: README.md
UMDCTF2022/rev/: README.md
UMDCTF2022/web/: README.md
UMDCTF2023/: README.md
UMDCTF2023/android/: README.md
UMDCTF2023/crypto/: README.md
UMDCTF2023/forensics/: README.md
UMDCTF2023/forensics/yara-trainer-gym/dev/yara-mart-site/: Dockerfile  pyproject.toml
UMDCTF2023/forensics/yara-trainer-gym/dev/yara-mart-site/yara_mart_site/: app.py  requirements.txt  yara_rules.yar
UMDCTF2023/forensics/yara-trainer-gym/dev/yara-mart-site/yara_mart_site/templates/: index.html
UMDCTF2023/hw_rf/: README.md
UMDCTF2023/misc/: README.md
UMDCTF2023/misc/machokes-flex/: .gitignore  CMakeLists.txt  README.md
UMDCTF2023/misc/machokes-flex/includes/learnopengl/: model.h  shader.h  shader_m.h  shader_s.h  shader_t.h
UMDCTF2023/misc/machokes-flex/src/: machokes-flex.cpp  mm.h  va.h
UMDCTF2023/mobile/: README.md
UMDCTF2023/networking/: README.md
UMDCTF2023/osint/: README.md
UMDCTF2023/pwn/: README.md
UMDCTF2023/rev/: README.md
UMDCTF2023/web/: README.md
UMDCTF2024/: README.md  rcds.yaml
UMDCTF2024/misc/: README.md
UMDCTF2024/pwn/: README.md
UMDCTF2024/rev/: README.md
UMDCTF2024/web/http-fanatics/reverse-proxy/: Cargo.toml  Dockerfile
UMDCTF2024/web/umdproxy/app/: Cargo.toml  Dockerfile
UMDCTF2024/web/umdproxy/app/src/: main.rs
UMDCTF2024/web/umdproxy/app/static/: contact.html  dashboard.html  faq.html  index.html  login.html  register.html  robots.txt
UMDCTF2025/: README.md  rcds.yaml
UMDCTF2025/crypto/: README.md
UMDCTF2025/crypto/broncoin/: Cargo.toml  Dockerfile  challenge.yaml  flag.txt  front.html  solve.rs
UMDCTF2025/crypto/broncoin/src/: coin.rs  hash.rs  lib.rs  merkle.rs  transact.rs
UMDCTF2025/misc/: README.md
UMDCTF2025/nyt/: README.md
UMDCTF2025/ohio/: README.md
UMDCTF2025/pwn/: README.md
UMDCTF2025/rev/: README.md
UMDCTF2025/web/gambling/: Cargo.toml  Dockerfile  README.md  challenge.yaml  docker-compose.yaml  solve.js
UMDCTF2025/web/gambling/src/: h1.rs  h3.rs  h3_util.rs  index.html  main.rs  router.rs  user.rs
(+1590 files in other folders)
