[package]
name = "broncoin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.83"
ark-groth16 = "0.5.0"
ark-relations = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-ed-on-bls12-381 = { version = "0.5.0", features = ["ark-r1cs-std", "r1cs", "std"] }
ark-crypto-primitives = { version = "0.5.0", features = ["ark-r1cs-std", "crh", "sponge", "r1cs"] }
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
ark-ec = "0.5.0"
base64 = "0.22.1"
# async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }

[[bin]]
name = "bron-server"
path = "src/bin/server/main.rs"

[[bin]]
name = "bron-client"
path = "src/bin/client/main.rs"
