[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
h3 = "0.0.4"
h3-quinn = "0.0.5"
http = "1.1.0"
http-body-util = "0.1.1"
httparse = "1.8.0"
hyper = { version = "1.3.1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.3", features = ["client", "http1", "http2", "server", "tokio"] }
quinn = "0.10.2"
rustls = "0.21.11"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.24.0"
url = "2.5.0"