[package]
name = "umdproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros"] }
bytes = "1.6.0"
either = "1.11.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
rustls = "0.23.5"
rustls-native-certs = "0.7.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", features = ["early-data"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower-sessions = "0.12.2"
url = "2.5.0"