[tool.poetry]
name = "yara-mart-site"
version = "0.1.0"
description = ""
authors = ["alden <17280789+ald3ns@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "yara_mart_site"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
yara-python = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
